# gsap-cli

./: .gitignore  CONTRIBUTING.md  README.md  spec.md
.agents/skills/: gsap-cli-usage
.agents/skills/gsap-cli-usage/: SKILL.md
.claude/skills/: gsap-cli-usage
cli/: Cargo.toml
cli/src/: args.rs  convert.rs  ipc.rs  main.rs  protocol.rs
cli/src/commands/: animate.rs  batch.rs  camera.rs  clear.rs  element.rs  gsap_set.rs  layout.rs  mod.rs  pipe.rs  scene.rs  screenshot.rs  status.rs  text.rs  timeline.rs
daemon/: biome.json  build.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  tsup.config.ts
daemon/src/: animation-manager.ts  commands.ts  index.ts  layout.ts  scene.ts  screenshot.ts  server.ts  terminal-kit.d.ts  ticker.ts
daemon/src/protocol/: schema.ts  types.ts
daemon/src/renderers/: browser.ts  terminal.ts  types.ts
daemon/src/renderers/browser/: client.js  index.html  styles.css
skills/gsap-cli-usage/: SKILL.md
